Añadinendo comentarios a funciones

--- a/YTApi.ipynb
+++ b/YTApi.ipynb
@@ -367,8 +367,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualizando los datos que vienen en el <code>.json</code> vemos que la columna <code>'publishedAt'</code> no se refiere a la fecha de publicación del video, sino a la fecha en la que el video se agregó en la playlist. Este es un problema porque los primeros videos tienen todos la misma fecha en esta sección, esto no nos interesa, necesitamos la fecha de publicación del video. Para corregir esto se tiene que llamar de nuevo a la API usando la ID del video que se nos da en el <code>.json</code>. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
@@ -415,8 +423,8 @@
     "    description = snippet['description']\n",
     "    video_id = item['contentDetails']['videoId']\n",
     "\n",
-    "    # Si el índice es entre los primeros 70 elementos\n",
-    "    if i >= len(playlists_items) - 100:\n",
+    "    # Son los últimos 94 son los afectados aquí, así que son los que seleccionamos\n",
+    "    if i >= len(playlists_items) - 94:\n",
     "        try:\n",
     "            # Realiza una petición a la API de videos para obtener la fecha de publicación original\n",
     "            response = service.videos().list(\n",
@@ -442,38 +450,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv('df')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# data = []\n",
-    "\n",
-    "# for item in playlists_items:\n",
-    "#     snippet = item['snippet']\n",
-    "#     published_at = snippet['publishedAt']\n",
-    "#     title = snippet['title']\n",
-    "#     description = snippet['description']\n",
-    "    \n",
-    "#     data.append([published_at, title, description])\n",
-    "    \n",
-    "# df = pd.DataFrame(data, columns=['published_at', 'title', 'description'])\n",
-    "# df = df.head(1101)\n",
-    "\n",
-    "# print(df)"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -492,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +477,7 @@
        "'Conferencia de prensa matutina, desde Palacio Nacional. Miércoles 21 de abril 2021 | Presidente AMLO.\\n\\n0:00 Inicio de transmisión\\n20:03 Comienza la conferencia de prensa del presidente Andrés Manuel López Obrador\\n22:25 Informe mensual de seguridad\\n1:04:19 Sesión de preguntas y respuestas\\n\\nEl Gobierno de la Cuarta Transformación trabaja para garantizar la paz en el país. Como cada mes, dimos a conocer las acciones, avances y retos en materia de seguridad pública. \\n\\nLa percepción de la inseguridad disminuyó y aumentó la confianza de la población en las fuerzas de seguridad. Además, 9 de 11 delitos del fuero federal se mantienen a la baja. Al prevenir la violencia y atender sus causas, impulsamos el desarrollo del país.\\n\\nDurante el primer trimestre de 2021 se presentaron 4.6 por ciento menos homicidios dolosos respecto al mismo periodo del año anterior. \\n\\nEn el acumulado de enero a marzo del 2021, Baja California, Chihuahua, Estado de México, Guanajuato, Jalisco y Michoacán concentraron el 50.7 por ciento de las víctimas de este delito. \\n\\nEl delito de feminicidio logró contenerse en los primeros tres meses del año al bajar 2.4 por ciento respecto al primer trimestre del año anterior. \\n\\nLos robos se redujeron en 17.8 por ciento en comparación con el primer trimestre de 2020. El secuestro se mantiene en las cifras más bajas en los últimos años; en el primer trimestre de 2021 disminuyó 36.8 por ciento respecto al mismo periodo de 2020. \\n\\nLa Secretaría de Seguridad y Protección Ciudadana dio a conocer que diariamente se ahorran 163 millones 929 mil 774 por el combate al delito de robo de hidrocarburos. \\n\\nLa prevención de toma de casetas evitó la pérdida de 3 mil 488 millones de pesos de enero a marzo de este año y de 2020 a 2021, de 13 mil 85 millones de pesos. \\n\\nLa Unidad de Inteligencia Financiera ha impactado en las fianzas del crimen organizado con el bloqueo de 36 mil 148 cuentas con 13 mil 31 millones de pesos.\\n\\nLa Guardia Nacional reporta que la corporación cuenta con 99 mil 608 elementos operativos en 200 coordinaciones regionales, de los cuales 84 mil 666 están desplegados y 14 mil 942 en apoyo a las operaciones. \\n\\nHay mil 903 efectivos en diversas situaciones administrativas, entre las que destacan el cuidado a candidatas y candidatos a puestos de elección popular.\\n\\nActualmente tenemos 164 cuarteles construidos y 84 en proceso de edificación. Al final de 2021 habrá 248 en total en el territorio nacional.\\n\\nReafirmamos que se fortalecerá la vigilancia en la frontera sur para proteger a las y los niños migrantes. No permitiremos el tráfico de personas ni el uso de menores, esta práctica es inhumana y cruel.\\n\\nEn una semana tendremos listo el plan en el que participarán las secretarías de Relaciones Exteriores, de Marina, de la Defensa Nacional, de Bienestar, de Salud y de Medio Ambiente y Recursos Naturales, además de la Guardia Nacional y el Sistema Nacional para el Desarrollo Integral de las Familias (DIF). \\n\\nEn la migración lo importante es atender, no contener y en eso estamos trabajando. Para nosotros, todo lo que tiene que ver con el principal de los derechos humanos, que es el derecho a la vida, siempre será una prioridad y no habrá techo financiero, destinaremos todos los recursos necesarios.\\n\\nMás información: https://bit.ly/3tGi4lk\\n\\nSigue las actividades del presidente de México: \\n\\nSitio web:\\nhttp://presidente.gob.mx\\n\\nYouTube:\\nhttps://www.youtube.com/lopezobrador\\n\\nFacebook:\\nhttps://facebook.com/lopezobrador.org.mx\\n\\nTwitter:\\nhttps://twitter.com/lopezobrador_\\n\\nInstagram:\\nhttps://www.instagram.com/lopezobrador/\\n\\nTelegram: \\nhttps://t.me/PresidenteAMLO\\n\\nSpotify:\\nhttps://spoti.fi/2C7jUmx'"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 351,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,8 +529,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La función <code>remove_flags</code> este regex también se puso en una función por su complejidad. Este detecta los enlaces de marcade tiempo (<code>00:00</code>)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,8 +549,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La función <code>remove_line</code> este regex quita los saltos de línea <code>\\n</code>, es importante que esta fucnión se aplique al final para la limpieza correcta del dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +644,7 @@
        "'  El Gobierno de la Cuarta Transformación trabaja para garantizar la paz en el país. Como cada mes, dimos a conocer las acciones, avances y retos en materia de seguridad pública. La percepción de la inseguridad disminuyó y aumentó la confianza de la población en las fuerzas de seguridad. Además, 9 de 11 delitos del fuero federal se mantienen a la baja. Al prevenir la violencia y atender sus causas, impulsamos el desarrollo del país.Durante el primer trimestre de 2021 se presentaron 4.6 por ciento menos homicidios dolosos respecto al mismo periodo del año anterior. En el acumulado de enero a marzo del 2021, Baja California, Chihuahua, Estado de México, Guanajuato, Jalisco y Michoacán concentraron el 50.7 por ciento de las víctimas de este delito. El delito de feminicidio logró contenerse en los primeros tres meses del año al bajar 2.4 por ciento respecto al primer trimestre del año anterior. Los robos se redujeron en 17.8 por ciento en comparación con el primer trimestre de 2020. El secuestro se mantiene en las cifras más bajas en los últimos años; en el primer trimestre de 2021 disminuyó 36.8 por ciento respecto al mismo periodo de 2020. La Secretaría de Seguridad y Protección Ciudadana dio a conocer que diariamente se ahorran 163 millones 929 mil 774 por el combate al delito de robo de hidrocarburos. La prevención de toma de casetas evitó la pérdida de 3 mil 488 millones de pesos de enero a marzo de este año y de 2020 a 2021, de 13 mil 85 millones de pesos. La Unidad de Inteligencia Financiera ha impactado en las fianzas del crimen organizado con el bloqueo de 36 mil 148 cuentas con 13 mil 31 millones de pesos.La Guardia Nacional reporta que la corporación cuenta con 99 mil 608 elementos operativos en 200 coordinaciones regionales, de los cuales 84 mil 666 están desplegados y 14 mil 942 en apoyo a las operaciones. Hay mil 903 efectivos en diversas situaciones administrativas, entre las que destacan el cuidado a candidatas y candidatos a puestos de elección popular.Actualmente tenemos 164 cuarteles construidos y 84 en proceso de edificación. Al final de 2021 habrá 248 en total en el territorio nacional.Reafirmamos que se fortalecerá la vigilancia en la frontera sur para proteger a las y los niños migrantes. No permitiremos el tráfico de personas ni el uso de menores, esta práctica es inhumana y cruel.En una semana tendremos listo el plan en el que participarán las secretarías de Relaciones Exteriores, de Marina, de la Defensa Nacional, de Bienestar, de Salud y de Medio Ambiente y Recursos Naturales, además de la Guardia Nacional y el Sistema Nacional para el Desarrollo Integral de las Familias (DIF). En la migración lo importante es atender, no contener y en eso estamos trabajando. Para nosotros, todo lo que tiene que ver con el principal de los derechos humanos, que es el derecho a la vida, siempre será una prioridad y no habrá techo financiero, destinaremos todos los recursos necesarios.  '"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 358,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +692,7 @@
        "Name: published_at, Length: 1101, dtype: object"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 359,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +881,7 @@
        "[1101 rows x 3 columns]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 363,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +912,7 @@
        "Name: clean_dates, Length: 1101, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 364,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1049,7 @@
        "[1101 rows x 1 columns]"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 367,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1077,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1168,7 @@
        "[233 rows x 1 columns]"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 369,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1212,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1303,7 @@
        "[233 rows x 1 columns]"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 371,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1322,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [
     {
@@ -1421,7 +1413,7 @@
        "[233 rows x 1 columns]"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 372,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1440,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [],
    "source": [
