--- a/TopicPredicton.ipynb
+++ b/TopicPredicton.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "source": [
     "* Eliminamos stopwords\n",
-    "* lematizamos\n",
+    "* lexematizamos\n",
     "* Normalizamos el texto (quitamos mayúsculas y signos de puntuación)\n",
     "* Vectorizamos y hacemos n-gramas\n",
     "* Usamos SVD para ver cuantos topicos pueden tener los documentos"
@@ -274,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aplicamos lematización"
+    "Aplicamos lexematización"
    ]
   },
   {
